Fix input boxes being off-screen in desktop mode

--- a/src/styles/settings.sass
+++ b/src/styles/settings.sass
@@ -81,8 +81,9 @@
             cursor: pointer
 
 .add-group
-    position: fixed
+    position: sticky
     width: 100%
+    top: 0px
     z-index: 1
     display: none
 
